--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "expo": "^49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.7.4",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
-    "tamagui": "^1.79.4",
-    "expo": "^49.0.0"
+    "tamagui": "^1.79.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -38,6 +40,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
